<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.activities.PerfilUsuario_Activity">

    <TextView
        android:id="@+id/tvMensagem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:maxLines="1"
        android:minHeight="48dp"
        android:text="@string/alterar_usu_rio"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:translationZ="-4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <EditText
            android:id="@+id/edT_Login2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="270dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/aldrich"
            android:hint="@string/usuario_min"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.559"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUsuario2"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/edt_Pass2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="270dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/aldrich"
            android:hint="@string/senha_min"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.569"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSenha2"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btCriar"
            android:layout_width="271dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/aldrich"
            android:text="@string/modificar"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swLogado" />

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="270dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/aldrich"
            android:hint="@string/nome_min"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNome2"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <Switch
            android:id="@+id/swLogado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/aldrich"
            android:minHeight="48dp"
            android:showText="false"
            android:text="@string/manter_logado"
            android:textColor="@color/colorPrimary"
            android:textOff="@string/n_o"
            android:textOn="@string/sim"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/edEmail"
            app:layout_constraintTop_toBottomOf="@+id/edEmail" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="270dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/aldrich"
            android:hint="@string/email_min"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.559"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail2"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/txtNome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:labelFor="@id/edtNome"
            android:text="@string/nome"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/edtNome"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtUsuario2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/aldrich"
            android:labelFor="@id/edT_Login2"
            android:text="@string/usu_rio"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/edT_Login2"
            app:layout_constraintTop_toBottomOf="@+id/edtNome" />

        <TextView
            android:id="@+id/txtSenha2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/aldrich"
            android:labelFor="@id/edt_Pass2"
            android:text="@string/senha"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/edt_Pass2"
            app:layout_constraintTop_toBottomOf="@+id/edT_Login2" />

        <TextView
            android:id="@+id/txtEmail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/aldrich"
            android:labelFor="@id/edEmail"
            android:text="@string/e_mail"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/edEmail"
            app:layout_constraintTop_toBottomOf="@+id/edt_Pass2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/activity_main_bottom_actions" />
</androidx.constraintlayout.widget.ConstraintLayout>

