<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".main.activities.ChecagemLogin_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="#2E8BC0C6"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMensagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="@font/aldrich"
            android:minHeight="48dp"
            android:text="@string/bem_vindo"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorLink="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edT_Login"
            android:layout_width="271dp"
            android:layout_height="48dp"

            android:layout_marginTop="100dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:fontFamily="@font/aldrich"
            android:hint="@string/usu_rio"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edt_Pass"
            android:layout_width="271dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:fontFamily="@font/aldrich"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edT_Login"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btLogar"
            android:layout_width="271dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/aldrich"
            android:text="@string/entrar"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_Pass" />

        <Button
            android:id="@+id/btNovo"
            android:layout_width="126dp"
            android:layout_height="49dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/aldrich"
            android:text="@string/novo"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvEsqueceuSenha"
            app:layout_constraintStart_toStartOf="@+id/btLogar" />

        <TextView
            android:id="@+id/tvEsqueceuSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginTop="54dp"
            android:autoLink="all"
            android:fontFamily="@font/aldrich"
            android:linksClickable="false"
            android:selectAllOnFocus="false"
            android:text="@string/esqueceu_a_senha"
            android:textColor="@color/colorPrimary"
            android:textColorLink="#FF5700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/btNovo"
            app:layout_constraintTop_toBottomOf="@+id/btLogar" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>